Set PyPi version dynamically

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [project]
 name = "aws-python-boto-tools"
-version = "0.0.3"
+dynamic = ["version"]
 description = "Utilities for SQS batch, STS assume-role cache, and CloudWatch logging"
 readme = "README.md"
 license-files = ["LICENSE", "LICENSE-human.txt"]
@@ -44,6 +44,7 @@ testing = [
 ]
 build = [
   "setuptools",
+  "setuptools-scm",
   "wheel",
 ]
 
@@ -64,6 +65,10 @@ package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools_scm]
+version_scheme = "release-branch-semver"
+local_scheme = "no-local-version"
 
 # Tools
 
