Allow git tags to use vX.Y.Z while PyPi gets X.Y.Z

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ package-dir = { "" = "src" }
 where = ["src"]
 
 [tool.setuptools_scm]
+tag_regex = "^v(?P<version>.*)$"
 version_scheme = "release-branch-semver"
 local_scheme = "no-local-version"
 
